# ais_backend

./: Cargo.toml  Dockerfile
docs/: docs.yaml
migrations/2023-09-29-122740_create_roles/: up.sql
migrations/2023-09-29-122742_create_users/: up.sql
migrations/2023-09-29-122805_create_reports/: down.sql  up.sql
migrations/2023-10-15-150922_create_tables/: down.sql  up.sql
migrations/2023-10-15-151118_create_products/: up.sql
migrations/2023-10-15-151122_create_orders/: up.sql
src/: db.rs  main.rs  result.rs  schema.rs  tests.rs
src/handlers/: add_report.rs  add_role.rs  add_user.rs  get_report.rs  get_reports_by_role.rs  get_role.rs  get_user.rs  mod.rs
src/handlers/auth/: login.rs
src/handlers/order/: add_order.rs  delete_order.rs  get_order.rs  mod.rs  set_active.rs
src/handlers/product/: add_product.rs  get_all.rs  get_product.rs  mod.rs
src/handlers/role/: add_role.rs  get_role.rs  mod.rs
src/handlers/table/: get_updates.rs  mod.rs  paid.rs
src/handlers/user/: add_user.rs  get_user.rs  mod.rs
src/models/: mod.rs  order.rs  product.rs  report.rs  role.rs  table.rs  user.rs
tests/: Cargo.toml
tests/src/: handlers_test.rs  main.rs  result.rs  schema.rs
tests/src/handlers/: mod.rs
tests/src/handlers/order/: add_order.rs  mod.rs  set_active.rs
tests/src/handlers/product/: add_product.rs  get_all.rs  mod.rs
tests/src/handlers/table/: paid.rs
tests/src/models/: order.rs  product.rs
