[package]
name = "ais_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version="0.4.4", features=["cors","trace"]}
axum = "0.6.20"
serde = { version = "1.0.152", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres","chrono"] }
tokio = { version = "1.32.0", features = ["full"] }
