[package]
name = "ais_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version="0.4.4", features=["cors","trace"]}
axum = "0.6.20"
rand = "0.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
deadpool-diesel = {version = "0.5.0", features= ["postgres","rt_tokio_1"]}
diesel = {version = "2.0.0-rc.1", features = ["chrono"]}
futures-util = "0.3"
serde = { version = "1.0.152", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
