[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version="0.4.4", features=["cors"]}
rand = "0.8"
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
dotenvy = "0.15"
diesel = { version = "2.0.0", features = ["postgres","chrono"] }
tokio = { version = "1.32.0", features = ["full"] }
